--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,197 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Quattrocento+Sans:wght@400;700&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Quattrocento Sans', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  text-align: center;
+  background-color: #f9f9f9;
+  color: black;
+  padding: 1rem;
+  box-shadow: 8px 9px 26px #afafaf; 
+}
+
+.nav h1 {
+  font-size: 2rem;
+  padding-left: 520px;
+  font-weight: bold;
+  margin: 0;
+}
+.getData {
+  margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 350px;
+    height: 440px;
+    border-radius: 23px;
+    background: #eeeded;
+    box-shadow: 33px 33px 64px #c7c7c7;
+               /* -33px -33px 64px #f9f9f9; */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+ 
+.tools {
+  display: flex;
+  align-items: flex-start !important;
+  padding: 9px;
+ }
+ .circle {
+  padding: 0 4px;
+ }
+ .box {
+  display: inline-block;
+  align-items: center;
+  width: 10px;
+  height: 10px;
+  padding: 1px;
+  border-radius: 50%;
+ }
+ .red {
+  background-color: #ff605c;
+ }
+ 
+ .yellow {
+  background-color: #ffbd44;
+ }
+ 
+ .green {
+  background-color: #00ca4e;
+ }
+.getData input{
+  width: 280px;
+  height: 30px;
+  border-radius: 8px;
+  border: 2px  #828282;
+  box-shadow:  4px 10px 24px #8e8e8e,
+               -33px -33px 64px #f9f9f9;
+}
+
+.getData img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.homePage {
+  align-items: center;
+  appearance: none;
+  background-color: #FCFCFD;
+  border-radius: 8px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  width: 88px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
 }
 
-.App-link {
-  color: #61dafb;
+.homePage:focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.homePage:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.homePage:active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
+}
+.getData h1 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.getData p {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.getData a {
+  font-size: 16px;
+  color: #333;
+  text-decoration: none;
+  margin-top: 20px;
+  transition: all 0.2s ease-in-out;
+}
+
+.getData a:hover {
+  color: #555;
+}
+@media (max-width: 768px) {
+  .nav {
+    flex-direction: column;
+    text-align: center;
+    padding: 1rem 0;
   }
-  to {
-    transform: rotate(360deg);
+
+  .nav h1 {
+    padding-left: 0;
+    margin-bottom: 1rem;
   }
 }
+@media (max-width: 768px) {
+  .getData {
+    margin-top: 50px;
+    width: 70%;
+    height: 70%;
+  }
+  .getData input{
+    width: 180px;
+    height: 20px;
+  }
+  .getData img {
+    width: 100px;
+    height: 110px;
+    
+  }
+  .getData h1 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .getData p {
+    font-size: 15px;
+    margin-bottom: 5px;
+  }
+  
+}
+
+
+
+
+
+
